--- a/SEA_Application/Views/Expense/Report.cshtml
+++ b/SEA_Application/Views/Expense/Report.cshtml
@@ -19,280 +19,251 @@ else if (User.IsInRole("Staff"))
 
 <script type="text/javascript">
     function Export() {
-        //alert("hello");
-        html2canvas(document.getElementById('ExpenseBody'), {
-            onrendered: function (canvas) {
-                var data = canvas.toDataURL();
-                var docDefinition = {
-                    content: [{
-                        image: data,
-                        width: 500
-                    }]
-                };
-                pdfMake.createPdf(docDefinition).download("ExpenseReport.pdf");
-                // alert("Admit Card Downloading Started");
-            }
-        });
+
+        var mywindow = window.open('', '', '');
+        mywindow.document.write('<html><head><title>' + document.title + '</title>  ');
+        mywindow.document.write('<style>td,th,tr, th,td,table {border-collapse:collapse}  th { font - size: 20px; }  td,th {padding: 5px;  } </style>');
+        mywindow.document.write('</head><body >');
+        // mywindow.document.write('<h1>' + document.title + '</h1>');
+        mywindow.document.write(document.getElementById('ExpenseBody').innerHTML);
+        // mywindow.document.write(document.getElementById('bill1').innerHTML);
+        mywindow.document.write('</body></html>');
+        mywindow.document.close(); // necessary for IE >= 10
+        mywindow.focus(); // necessary for IE >= 10*/
+
+        mywindow.print();
+        mywindow.close();
     }
 </script>
+
 <style type="text/css">
 
-    th{
-        font-size:20px;
+    th {
+        font-size: 20px;
     }
-
-  
+    td,th {
+        padding:5px;
+      
+    }
+   
 </style>
-@*<style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
 
-        h3.headings {
-        }
 
-        th, td {
-            padding: 5px;
-            background-color: none;
-            border-top: 1px solid;
-        }
-
-        th {
-            text-align: left;
-        }
-
-        td {
-            border-top: 1px solid;
-        }
-
-        th {
-            text-align: left;
-        }
-
-        .text_underline {
-            text-decoration: underline;
-        }
-    </style>*@
 <br />
 <br />
+<div class="card">
+    <div class="card-body p-4">
 
-<div class="col-md-12" style="padding:20px" >
+        <div class="col-md-12">
 
-    <div id="ExpenseBody" style="border: 1px solid; height: auto;padding:20px;" >
+            <div id="ExpenseBody" style="border: 0px solid; height: auto;padding:20px;">
 
 
-        <h3 class="headings" align="center"> Daily Account Sheet @SEA_Application.Models.GetLocalDateTime.GetLocalDateTimeFunction() </h3>
-                
+                <h3 class="headings" align="center"> Daily Account Sheet @SEA_Application.Models.GetLocalDateTime.GetLocalDateTimeFunction() </h3>
 
-        <table id="DebitTable" border="1" width="50%" align="left">
+                <br />
 
-            <thead>
-                <tr>
-                    <th>Cash In</th>
-                    <th>Amount</th>
+              
 
-                </tr>
+                  
 
 
 
-            </thead>
+                        <table id="DebitTable" border="1" style="float:left" width="50%" >
 
-            <tbody id="DebitTableBody">
-            </tbody>
+                            <thead>
+                                <tr>
+                                    <th style="font-weight:bold;" >Cash In</th>
+                                    <th style="text-align:center;font-weight:bold">Amount</th>
 
-        </table>
-
-
-
-
-        <table id="ExpenseTable" border="1" width="50%">
-            <thead>
-
-                <tr>
-                    <th>Expenditure</th>
-                    <th>Amount</th>
-
-                </tr>
+                                </tr>
 
 
 
-            </thead>
+                            </thead>
 
-            <tbody id="ExpenseTableBody">
-            </tbody>
+                            <tbody id="DebitTableBody">
+                            </tbody>
 
-        </table>
+                        </table>
 
-        <br />
-    </div>
-    <center>
-        <input onclick="Export()" type="button" id="btnExport" class="btn btn-primary" name="name" value="Download as PDF" />
-    </center>
-    <br />
+               
 
+                 
+
+
+
+                        <table id="ExpenseTable" border="1" style="float:right" width="49%" >
+                            <thead>
+
+                                <tr>
+                                    <th style="font-weight:bold">Expenditure</th>
+                                    <th style="text-align:center;font-weight:bold">Amount</th>
+
+                                </tr>
+
+
+
+                            </thead>
+
+                            <tbody id="ExpenseTableBody">
+                            </tbody>
+
+                        </table>
+
+                    <div style="clear:both"></div>
+
+                </div>
+                <br />
+
+
+
+            </div>
+            <center>
+                <input onclick="Export()" type="button" id="btnExport" class="btn btn-primary" name="name" value="Print" />
+            </center>
+            <br />
+        </div>
 </div>
 
-<script>
 
-    $(document).ready(function () {
+        <script>
 
-          $("#PageHeader").html("Daily Account Sheet");
+            $(document).ready(function () {
 
-        var TotalDebit = 0;
-        var TotalCredit = 0;
+                $("#PageHeader").html("Daily Account Sheet");
 
+                var TotalDebit = 0;
+                var TotalCredit = 0;
 
-        $.ajax({
 
-            type: "POST",
-            url: "/Expense/DebitRecords",
-            data: {},
-            success: function (result) {
+                $.ajax({
 
-                //var currentDate = new Date();
-                //var date = currentDate.getDate();
-                //var month = currentDate.getMonth();
-                //var year = currentDate.getFullYear();
+                    type: "POST",
+                    url: "/Expense/DebitRecords",
+                    data: {},
+                    success: function (result) {
 
-                //  var monthDateYear = (month + 1) + "/" + date + "/" + year;
-                //alert(monthDateYear);
-                //var Total = 0;
-                //var TotalCredit = 0;
-                TotalDebit = 0;
-                $.each(result, function (index) {
 
-                    
-                    //   var ste = result[index].Date == Date.now;
+                        TotalDebit = 0;
+                        $.each(result, function (index) {
 
-                   
+                            var TableRow = "<tr class='blank_row'><td>" + result[index].VoucherDescription + "</td> <td align='right'>" + result[index].VoucherAmount + "&nbsp;&nbsp; </td></tr>"
 
-                    var TableRow = "<tr class='blank_row'><td>&nbsp;&nbsp;" + result[index].VoucherDescription + "</td> <td align='right'>" + result[index].VoucherAmount + "&nbsp;&nbsp; </td></tr>"
+                            TotalDebit = TotalDebit + parseFloat(result[index].VoucherAmount);
 
-                      TotalDebit = TotalDebit + parseFloat(result[index].VoucherAmount);
+                            // TotalCredit = TotalCredit + parseFloat(result[index].VoucherAmount);
 
-                    // TotalCredit = TotalCredit + parseFloat(result[index].VoucherAmount);
 
+                            // alert(result[index].Date);
 
-                    // alert(result[index].Date);
+                            $('#DebitTableBody').append(TableRow);
 
-                    $('#DebitTableBody').append(TableRow);
 
 
+                        });
 
-                });
+                        var Total = TotalDebit;
+                        $('#DebitTableBody').append("<tr id='total'><td  ><b>Total:</b></td>   <td align='right'><b>" + Total + "&nbsp;</b></td></tr>");
 
-                var Total = TotalDebit;
-                $('#DebitTableBody').append("<tr id='total'><td  ><b>&nbsp;&nbsp;Total:</b></td>   <td align='right'><b>" + Total + "&nbsp;</b></td></tr>");
+                        ExpenseTable();
 
-                ExpenseTable();
+                    }
 
-            }
 
+                })//end of ajax
 
-        })//end of ajax
+                function ExpenseTable() {
 
-        function ExpenseTable() {
+                    $.ajax({
 
-        $.ajax({
+                        type: "POST",
+                        url: "/Expense/ReportRecords",
+                        data: {},
+                        success: function (result) {
 
-            type: "POST",
-            url: "/Expense/ReportRecords",
-            data: {},
-            success: function (result) {
+                            TotalCredit = 0;
 
-                //var currentDate = new Date();
-                //var date = currentDate.getDate();
-                //var month = currentDate.getMonth();
-                //var year = currentDate.getFullYear();
+                            $.each(result, function (index) {
 
-                //  var monthDateYear = (month + 1) + "/" + date + "/" + year;
-                //alert(monthDateYear);
-                //var Total = 0;
-                 TotalCredit = 0;
-                //var TotalDebit = 0;
-                $.each(result, function (index) {
 
-                    
-                    var ste = result[index].Date == Date.now;
+                                var ste = result[index].Date == Date.now;
 
+                                var TableRow = "<tr class='blank_row'><td>" + result[index].VoucherDescription + "</td> <td align='right'>" + result[index].VoucherAmount + "&nbsp;&nbsp; </td></tr>"
 
-                    
-                   var TableRow = "<tr class='blank_row'><td>&nbsp;&nbsp;" + result[index].VoucherDescription + "</td> <td align='right'>" + result[index].VoucherAmount + "&nbsp;&nbsp; </td></tr>"
+                                TotalCredit = TotalCredit + parseFloat(result[index].VoucherAmount);
 
-                     TotalCredit = TotalCredit + parseFloat(result[index].VoucherAmount);
-                    // alert(result[index].Date);
 
-                    $('#ExpenseTableBody').append(TableRow);
+                                $('#ExpenseTableBody').append(TableRow);
 
-                });
-                var Total = TotalCredit;
+                            });
+                            var Total = TotalCredit;
 
-                debugger
-                var GrandTotal = TotalDebit - TotalCredit;
-                $('#ExpenseTableBody').append("<tr id='total'><td  ><b>&nbsp;&nbsp;Total exp:</b></td>   <td align='right'><b> " + Total + "&nbsp;&nbsp;</b></td></tr>");
-                
-                $('#ExpenseTableBody').append("<tr><td ><b>&nbsp;&nbsp;Bal:</b></td>   <td align='right'> <b>" + GrandTotal + "&nbsp;&nbsp;</b></td></tr>");
+                            debugger
+                            var GrandTotal = TotalDebit - TotalCredit;
+                            $('#ExpenseTableBody').append("<tr id='total'><td  ><b>Total exp:</b></td>   <td align='right'><b> " + Total + "&nbsp;&nbsp;</b></td></tr>");
 
+                            $('#ExpenseTableBody').append("<tr><td ><b>Bal:</b></td>   <td align='right'> <b>" + GrandTotal + "&nbsp;&nbsp;</b></td></tr>");
 
-                EmptyRows();
-                
-            }
 
+                            EmptyRows();
 
-        })//end of ajax
+                        }
 
-        }
-        function EmptyRows() {
 
+                    })//end of ajax
 
-        var ExpenseTableBody = $("#ExpenseTableBody");
-        var DebitTableBody = $("#DebitTableBody");
+                }
+                function EmptyRows() {
 
 
-        var DebitTableRows = $('#DebitTableBody tr').length;
-        var ExpenseTableRows = $('#ExpenseTableBody tr').length;
+                    var ExpenseTableBody = $("#ExpenseTableBody");
+                    var DebitTableBody = $("#DebitTableBody");
 
-        //alert(DebitTableRows);
-        //alert(ExpenseTableRows);
 
-        var RowsToAdd = 0;
+                    var DebitTableRows = $('#DebitTableBody tr').length;
+                    var ExpenseTableRows = $('#ExpenseTableBody tr').length;
 
-        if (DebitTableRows > ExpenseTableRows) {
-            debugger
+                    //alert(DebitTableRows);
+                    //alert(ExpenseTableRows);
 
-            RowsToAdd = DebitTableRows - ExpenseTableRows;
+                    var RowsToAdd = 0;
 
-            //aler(RowsToAdd);
+                    if (DebitTableRows > ExpenseTableRows) {
+                        debugger
 
+                        RowsToAdd = DebitTableRows - ExpenseTableRows;
 
-            for (i = 1; i <= RowsToAdd; i++) {
+                        //aler(RowsToAdd);
 
-                $("#ExpenseTableBody #total").before("<tr class='blank_row' style='height:21px'><td></td><td></td></tr>");
 
-            }
+                        for (i = 1; i <= RowsToAdd; i++) {
 
+                            $("#ExpenseTableBody #total").before("<tr class='blank_row' style='height:21px'><td></td><td></td></tr>");
 
-        }
-        else if (DebitTableRows < ExpenseTableRows) {
-            debugger
-            RowsToAdd = ExpenseTableRows - DebitTableRows;
+                        }
 
 
-            for (i = 1; i <= RowsToAdd; i++) {
-                $("#DebitTableBody #total").before("<tr  class='blank_row' style='height:21px' ><td></td><td></td></tr>");
+                    }
+                    else if (DebitTableRows < ExpenseTableRows) {
+                        debugger
+                        RowsToAdd = ExpenseTableRows - DebitTableRows;
 
-            }
 
+                        for (i = 1; i <= RowsToAdd; i++) {
+                            $("#DebitTableBody #total").before("<tr  class='blank_row' style='height:21px' ><td></td><td></td></tr>");
 
-        }
+                        }
 
-        else {
 
-        }
-        }
+                    }
 
+                    else {
 
-    })
+                    }
+                }
 
-</script>
+
+            })
+
+        </script>
